; ModuleID = '/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/extr_vfs_lwip.c_lwip_stop_socket_select_isr.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/extr_vfs_lwip.c_lwip_stop_socket_select_isr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pdTRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @lwip_stop_socket_select_isr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lwip_stop_socket_select_isr(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i64 @sys_sem_signal_isr(i8* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = load i32*, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i32, i32* @pdTRUE, align 4
  %13 = load i32*, i32** %4, align 8
  store i32 %12, i32* %13, align 4
  br label %14

14:                                               ; preds = %11, %8, %2
  ret void
}

declare dso_local i64 @sys_sem_signal_isr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
